# STM32-CMAKE-FREERTOS

./: .mxproject  CMakeLists.txt  Makefile  README.md  TestFreeRTOSMake.ioc
Core/Inc/: eth.h  main.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h  usart.h  usb_otg.h
Core/Src/: eth.c  gpio.c  main.c  stm32h7xx_hal_msp.c  stm32h7xx_it.c  usart.c  usb_otg.c
